# only-talk-app

./: .env  .gitignore  .prettierignore  COMPLETION_SUMMARY.md  DELIVERY_SUMMARY.md  NAT3_WEBRTC_FIX.md  QUIC_CONNECTION_BUTTONS.md  README.md  README_EN.md  WebRTC_CHAT_DOCUMENTATION.md  WebRTC_LOGGING_GUIDE.md  WebRTC_QUICK_REFERENCE.md  package.json  pnpm-lock.yaml  tsconfig.json  聊天记录链存储防丢.md
src-tauri/: .gitignore  .taurignore  Cargo.toml  installer.nsi  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: mobile-default.json  pc-default.json  window-default.json
src-tauri/docs/: notification_levels.md
src-tauri/examples/: compare_decoders.rs  compare_filters.rs  compare_with_java.rs  create_test_image.rs  debug_compress.rs  decode_profile.rs  detailed_profile.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: README-android-openssl.md  build-openssl-android.ps1  build-openssl-android.sh
src-tauri/src/: config.rs  init_app.rs  lib.rs  tray.rs
src-tauri/src/cmd/: api_controller.rs  auth_controller.rs  chat_record_controller.rs  chat_session_controller.rs  file_controller.rs  friend_controller.rs  group_controller.rs  mod.rs  notification_controller.rs  p2p_controller.rs  user_controller.rs
src-tauri/src/common_service/: chat_service.rs  p2p_service.rs  user_service.rs
src-tauri/src/controller/: api_controller.rs
src-tauri/src/dao/: chat_record_ack.rs  chat_record_db.rs  chat_record_read.rs  chat_record_send.rs  create_table.rs  file_record_db.rs  friend_db.rs  group_chat_record_db.rs  group_db.rs  group_member_db.rs  group_message_ack.rs  group_message_read.rs  init_common_db.rs  (+5 more)
src-tauri/tests/: api_service_tests.rs  dns_utils_tests.rs  image_utils_real_tests.rs  image_utils_tests.rs
(+520 files in other folders)
